<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">nPuzzle10875875</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="choose_img">Choose an image:</string>
    <string name="title_activity_game_play">GamePlay</string>
    <string name="easy">easy</string>
    <string name="medium">medium</string>
    <string name="hard">hard</string>
    <string name="reshuffle">reshuffle</string>
    <string name="change_difficulty">change difficulty</string>
    <string name="change_image">change image</string>
    <string name="title_activity_you_win">YouWin</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>
